# python-project-83

./: .gitignore  Makefile  README.md  database.db  database.sql  nixpacks.toml  pyproject.toml
.github/workflows/: my-checker.yml
page_analyzer/: __init__.py  app.py  routes.py
page_analyzer/config/: __init__.py  config.py  key
page_analyzer/configuration/: __init__.py  flask_config.py
page_analyzer/db/: __init__.py  manage_sql.py
page_analyzer/link_validator/: __init__.py  link_validator.py
page_analyzer/models/: __init__.py  extensions.py  models.py
page_analyzer/templates/: 404.html  base.html  body.html  footer.html  form.html  index.html  navbar.html  unknown_page.html  url.html  urls.html
page_analyzer/url_handler/: __init__.py  arrange_data.py  main.py
tests/: conftest.py
tests/unit/: test_app.py  test_db.py
