[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Timofey"]
readme = "README.md"
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = ">=3.10"
flask = "^2.2.3"
gunicorn = "^20.1.0"
flake8 = "^6.0.0"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
coverage = "^7.2.2"
flask-session = "^0.4.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
